<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_amount"><b>Bill Amount</b></string>
    <string name="percent"><b>Percent</b></string>
    <string name="tip"><b>Tip</b></string>
    <string name="total"><b>Total</b></string>
    <string name="tip_percent">15%</string>
    <string name="percentDown">-</string>
    <string name="percentUp">+</string>
    <string name="billEditText">15.00</string>
    <string name="tipText">$2.25</string>
    <string name="totalText">$17.25</string>
</resources>
